--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <header>
       <h1>Beard Gallery</h1>
+      <h2><script src="app.js"></script></h2>
+      <h2><script src="app2.js"></script></h2>
       <nav>
          <li> <a href="https://dleigh01.github.io/102d36_lab04/"> Dana Link </a> </li>
       </nav>
