update HTML page

--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
   <head>
     <title>Beard Gallery</title>
     <link rel="stylesheet" href="style.css">
+    <h2><script src="app.js"></script></h2>
+    <h2><script>askTheUser()</script></h2>
   </head>
   <body>
     <header>
       <h1>Beard Gallery</h1>
-      <h2><script src="app.js"></script></h2>
+      <h2><script>displayRating()</script></h2>
+      <h2><script>guessingGame()</script></h2>
+      <h2><script>addTwoNumbers(picksNumbers())</script></h2>
       <h2><script src="app2.js"></script></h2>
+      <h2><script src="app3.js"></script></h2>
       <nav>
          <li> <a href="https://dleigh01.github.io/102d36_lab04/"> Dana Link </a> </li>
       </nav>
     </header>
     <main>
             <img src=https://placebeard.it/2500x600>
-    </main>
-     <p> Lorem ipsum dolor amet mustache knausgaard +1, <br><br>blue bottle waistcoat tbh semiotics artisan<br><br>
-          synth stumptown gastropub cornhole celiac swag. <br><br>Brunch raclette vexillologist post-ironic<br><br>
-            glossier ennui XOXO mlkshk godard pour-over <br><br>blog tumblr humblebrag. Blue bottle put a<br><br>
+        <p> Lorem ipsum dolor amet mustache knausgaard +1, <br><br>blue bottle waistcoat tbh semiotics artisan<br><br>
+              synth stumptown gastropub cornhole celiac swag. <br><br>Brunch raclette vexillologist post-ironic<br><br>
+              glossier ennui XOXO mlkshk godard pour-over <br><br>blog tumblr humblebrag. Blue bottle put a<br><br>
               bird on it twee prism biodiesel brooklyn. <br><br>Blue bottle ennui tbh succulents.   
-
-    </p>
-    <P>
-        <img src=https://placebeard.it/640x800>
-
-    </P>
+              
+        </p>
+            <P>
+              <img src=https://placebeard.it/640x800>
+              
+            </P>
+    </main>
      <footer>
             <p>Created by Jason Wilson. © 2022</p>
     </footer>
